iRedMail-1.0:
    * Improvements:
        + Dovecot: Enable tracking user loast login time by default for
          MySQL/MariaDB and OpenLDAP backends.
          Note: Dovecot doesn't support this with PostgreSQL yet.
        + netdata: Disable sending anonymous statistics to netdata cloud.

    * Fixed issues:
        - tools/create_mail_user_OpenLDAP.py:
            - Fix missing comma which causes incorrect value of
              ldap attribute 'enabledService'.
              Thanks Michael Chong.
        - Loose Fail2ban filter rules (postfix/dovecot) to reduce negative bans.
        - [Linux] Not send kill signal to php-fpm daemon process to reopen log
          file after logrotation.

    * Updated packages:
        + Roundcube webmail -> 1.3.9
        + iRedAdmin -> 0.9.7
        + iRedAPD -> 2.7
        + mlmmjadmin -> 2.1
        + netdata -> 1.13.0
        + php -> 7.2 (FreeBSD only)

iRedMail-0.9.9 (Dec 17, 2018):
    * Supports new distribution release:
        + OpenBSD 6.4
        + Ubuntu 18.10. WARNING: It receives only 9 months of security and
          maintenance updates, until July 2019.
          NOT RECOMMENDED FOR PRODUCTION SERVER.

    * Improvements:
        + netdata is able to monitor OpenLDAP.
        + SOGo now supports resource management with OpenLDAP backend.
        + Add rc script and rules for ip6tables on Debian/Ubuntu.
        + iRedAdmin is now running as a standalone uwsgi instance (service
          name 'iredadmin'), not controlled by 'uwsgi' service anymore.
        + Use /opt/www to store web applications on all Linux distros and
          OpenBSD.
        + Able to set per-user mailbox format (e.g. mdbox) and mailbox folder
          appended to maildir path in SQL/LDAP.
        + Switch to utf8mb4 as default character set in MySQL.
        + Set file/directory permission to 0400 for dumpped SQL backup files.
        + OpenLDAP log file has been moved to /var/log/openldap/openldap.log